# Amharic-Corpus-Analysis

./: .gitignore  CMakeLists.txt  README.md  notes.md  todo.md
include/: Tokenizer.h  Visualize.h
src/: CMakeLists.txt  Tokenizer.cpp  Visualize.cpp  main.cpp
tool/: corpus_analysis.py  crawler.py  filter.py  scraper.py  total_words.txt
tool/data/: dictionary.txt  frequency_data.txt
